# Newsletter

./: config.py  index.html  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
archive/: 2025-05-18.html  2025-05-19.html  2025-05-20.html  2025-05-21.html  2025-05-22.html  2025-05-23.html  2025-05-24.html  2025-05-25.html  2025-05-26.html  2025-05-27.html  2025-05-28.html  2025-05-29.html  2025-05-30.html  2025-05-31.html  2025-06-01.html  2025-06-02.html  2025-06-03.html  2025-06-04.html  2025-06-05.html  2025-06-06.html  2025-06-07.html  2025-06-08.html  2025-06-09.html  2025-06-10.html  2025-06-11.html  2025-06-12.html  2025-06-13.html  2025-06-14.html  2025-06-15.html  2025-07-02.html  2025-08-02.html  2025-09-02.html  2025-11-02.html  2025-12-02.html  2026-02-02.html  2026-03-02.html  2026-04-02.html  index.html
data/: preferences.json  prompts.json  sources.json
data/history/: 2025-05-15.json  2025-05-17.json  2025-05-18.json  2025-05-19.json  2025-05-20.json  2025-05-21.json  2025-05-22.json  2025-05-23.json  2025-05-24.json  2025-05-25.json  2025-05-26.json  2025-05-27.json  2025-05-28.json  2025-05-29.json  2025-05-30.json  2025-05-31.json  2025-06-01.json  2025-06-02.json  2025-06-03.json  2025-06-04.json  2025-06-05.json  2025-06-06.json  2025-06-07.json  2025-06-08.json  2025-06-09.json  2025-06-10.json  2025-06-11.json  2025-06-12.json  (+15 more)
feeddigest/: config.py
output/: index.html
src/: __init__.py  classifier.py  collector.py  feedback.py  generator.py
templates/: archive_index.html  base.html  daily.html  weekly_summary.html
(+8 files in other folders)
