[project]
name = "newsletter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "jinja2>=3.1.6",
    "llm>=0.25",
    "llm-gemini>=0.19.1",
    "markdown>=3.8",
    "python-dotenv==1.1.0",
]
